Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18280

Galera test failure on galera_split_brain and galera_kill_nochanges

    XMLWordPrintable

Details

    Description

      galera.galera_split_brain 'innodb'       w1 [ fail ]
              Test ended at 2019-01-17 10:30:13
       
      CURRENT_TEST: galera.galera_split_brain
      mysqltest: In included file "./include/galera_wait_ready.inc": 
      included from /home/jan/mysql/10.4-galera-2/mysql-test/suite/galera/include/start_mysqld.inc at line 16:
      included from /home/jan/mysql/10.4-galera-2/mysql-test/suite/galera/t/galera_split_brain.test at line 33:
      At line 28: "Server did not transition to READY state"
       
      The result from queries just before the failure was:
      connection node_2;
      connection node_1;
      connection node_1;
      connection node_2;
      call mtr.add_suppression("WSREP: TO isolation failed for: ");
      connection node_1;
      connection node_2;
      Killing server ...
      connection node_1;
      CREATE TABLE t1 (f1 INTEGER) ENGINE=InnoDB;
      ERROR 40001: Deadlock found when trying to get lock; try restarting transaction
      connection node_2;
       
       - saving '/home/jan/mysql/10.4-galera-2/mysql-test/var/1/log/galera.galera_split_brain-innodb/' to '/home/jan/mysql/10.4-galera-2/mysql-test/var/log/galera.galera_split_brain-innodb/'
      ***Warnings generated in error logs during shutdown after running tests: galera.galera_split_brain
       
      2019-01-17 10:29:14 0 [Warning] WSREP: node uuid: 652905b1 last_prim(type: 3, uuid: 652905b1) is inconsistent to restored view(type: V_NON_PRIM, uuid: 652905b1
      
      

      and very similarly looking

      galera.galera_kill_nochanges 'innodb'    w4 [ fail ]
              Test ended at 2019-01-17 10:27:35
       
      CURRENT_TEST: galera.galera_kill_nochanges
      mysqltest: In included file "./include/galera_wait_ready.inc": 
      included from /home/jan/mysql/10.4-galera-2/mysql-test/suite/galera/include/start_mysqld.inc at line 16:
      included from /home/jan/mysql/10.4-galera-2/mysql-test/suite/galera/t/galera_kill_nochanges.test at line 23:
      At line 28: "Server did not transition to READY state"
       
      The result from queries just before the failure was:
      connection node_2;
      connection node_1;
      connection node_1;
      CREATE TABLE t1 (f1 INTEGER) ENGINE=InnoDB;
      INSERT INTO t1 VALUES (1);
      connection node_2;
      Killing server ...
      connection node_1;
      SET SESSION wsrep_sync_wait = 0;
      SET SESSION wsrep_sync_wait = DEFAULT;
      connection node_2;
       
       - saving '/home/jan/mysql/10.4-galera-2/mysql-test/var/4/log/galera.galera_kill_nochanges-innodb/' to '/home/jan/mysql/10.4-galera-2/mysql-test/var/log/galera.galera_kill_nochanges-innodb/'
      ***Warnings generated in error logs during shutdown after running tests: galera.galera_kill_nochanges
       
      2019-01-17 10:26:36 0 [Warning] WSREP: node uuid: 5e0eae25 last_prim(type: 3, uuid: 5e0eae25) is inconsistent to restored view(type: V_NON_PRIM, uuid: 5e0eae25
      
      

      Attachments

        Activity

          People

            mkaruza Mario Karuza (Inactive)
            jplindst Jan Lindström (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1h
                1h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.