Disable tests that were already disabled earlier 	galera_as_slave_gtid_replicate_do_db_cc : Requires MySQL GTID 	galera.galera_kill_nochanges : MDEV-18280 Galera test failure on galera_split_brain and galera_kill_nochanges 	galera.galera_split_brain : MDEV-18280 Galera test failure on galera_split_brain and galera_kill_nochanges

wsrep_append_foreign_key
	Fix compiler warning

wsrep_append_key
ha_innobase::wsrep_append_keys
	Fix output formating

wsrep_kill_victim
	Remove unnecessary bf_this and unnecessary comparison to bf_other

trx_get_trx_by_xid_callback
	Add comment to #endif

	modified:   mysql-test/suite/galera/disabled.def
	modified:   storage/innobase/handler/ha_innodb.cc
	modified:   storage/innobase/lock/lock0lock.cc
	modified:   storage/innobase/trx/trx0trx.cc